--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,4 +28,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: valid-proxies
-          path: valid_proxies.tx
+          path: valid_proxies.txt
