--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,40 +1,8 @@
-# name: Run Proxy Checker
-
-# on:
-#   schedule:
-#     - cron: '*/10 * * * *' # Runs every 10 minutes
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-
-#       - name: Set up Python
-#         uses: actions/setup-python@v4
-#         with:
-#           python-version: '3.9'
-
-#       - name: Install dependencies
-#         run: |
-#           pip install --upgrade pip
-#           pip install -r requirements.txt
-
-#       - name: Run proxy checker script
-#         run: python main.py
-
-#       - name: Upload valid proxies as an artifact
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: valid-proxies
-#           path: valid_proxies.txt
-
 name: Run Proxy Checker
 
 on:
   schedule:
-    - cron: '*/10 * * * *' # Runs every 10 minutes
+    - cron: '0 0 * * *' # Runs every day at 00:00
 
 jobs:
   build:
