--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: Run Proxy Checker
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs every day at 00:00
+#    - cron: '0 0 * * *' # Runs every day at 00:00
 
 jobs:
   build:
